# riscv-tests-cmake

./: CMakeLists.txt  LICENSE  README.md
toolchains/: clang-rv32i-toolchain.cmake  clang-rv64i-toolchain.cmake  gcc-rv32i-toolchain.cmake  gcc-rv64i-toolchain.cmake
